<resources>
    <string name="app_name">Poke Luv</string>

    <!--Names used for the Action Bar Titles-->
    <string name="pokedex_name">Pokédex</string>
    <string name="favorites_name">BOX No. 1</string>
    <string name="about_name">About</string>

    <!--Msgs to Display to the User-->
    <string name="add_pokemon_to_favs_msg">Added to your PC BOX.</string>
    <string name="redundant_fav_pokemon_msg">Already in your PC!</string>
    <string name="remove_fav_pokemon_msg">Pokémon removed from PC Box No. 1</string>
    <string name="redundant_remove_fav_pokemon_msg">You haven\'t transferred this Pokémon to your PC yet!</string>
    <string name="fav_activity_msg">Transfer your favorite Pokémon here!</string>
    <string name="poke_list_fragment_msg">Catch more Pokémon to complete your Pokédex!</string>

    <!--Custom font provided under a Freeware license at http://www.fontspace.com/jackster-productions/pokemon-gb-->
    <string name="font_path">fonts/Pokemon GB.ttf</string>

    <!-- Menu Options Text -->
    <string name="menu_more_pokemon">POKéDEX</string>
    <string name="menu_catch_pokemon">CATCH PKMN</string>
    <string name="menu_add_to_favs">TRANSFER TO PC</string>
    <string name="menu_remove_from_favs">REMOVE FROM PC</string>
    <string name="menu_favorites">YOUR PC</string>
    <string name="menu_about">ABOUT</string>

    <!--Text and Content Desc. for the Pokemon Fragment Layout-->
    <string name="poke_fragment_num_borders">"No. "</string>
    <string name="poke_fragment_weight">"Weight: "</string>
    <string name="poke_fragment_height">"Height: "</string>
    <string name="poke_fragment_color">"Color: "</string>
    <string name="poke_fragment_shape">"Shape: "</string>
    <string name="poke_fragment_habitat">"Habitat: "</string>
    <string name="poke_fragment_evolutions_header">EVOLUTIONS</string>

    <string name="content_desc_pokemon_img">Pokémon Image</string>

    <!--Text for Generation Buttons-->
    <string name="gen_I_button">Kanto</string>
    <string name="gen_II_button">Johto</string>
    <string name="gen_III_button">Hoenn</string>
    <string name="gen_IV_button">Sinnoh</string>
    <string name="gen_V_button">Unova</string>
    <string name="gen_VI_button">Kalos</string>

    <!-- Content Desc. for Poke List-->
    <string name="content_desc_pokemon_list">Pokémon</string>

    <!--Text and Content Desc. for About Activity-->
    <string name="about_tagline">Built by an uncle to teach his little nephew about the wonderful world of Pokémon.\n\nwww.mianlabs.com</string>
    <string name="about_legal_disclaimer_title">LEGAL DISCLAIMER</string>
    <string name="about_legal_disclaimer">This application includes data, images, sounds, and terms from the Pokémon series of video games. This is all the intellectual property of Nintendo, Creatures Inc., and GAME FREAK inc. and is protected by various copyrights and trademarks. \n\nThe developer believes that the use of this intellectual property for a fan-made nonprofit educational reference is covered by fair use and that the application is significantly deprecated without said property included.\n\nNo copyright or trademark infringement is intended in using Pokémon content on Poke Luv.\n\n\nThe Pixel Heart Patterns used as background for this application were designed, created, and distributed freely for non-profit and commercial use by artist Pandora42 from DeviantArt.</string>

    <string name="content_desc_about_app_logo">App Icon Logo</string>
</resources>
