<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Damián Adams-->
<LinearLayout
    android:id="@+id/gen_buttons_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_static_lines"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/gen_fragment_side_padding"
    android:paddingLeft="@dimen/gen_fragment_side_padding"
    android:paddingRight="@dimen/gen_fragment_side_padding"
    android:paddingStart="@dimen/gen_fragment_side_padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.generations.GenFragment">

    <Button
        android:id="@+id/button_gen_i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_borders"
        android:stateListAnimator="@null"
        android:text="@string/gen_I_button"/>

    <Button
        android:id="@+id/button_gen_ii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/gen_fragment_button_vertical_margins"
        android:layout_weight="1"
        android:background="@drawable/button_borders"
        android:stateListAnimator="@null"
        android:text="@string/gen_II_button"/>

    <Button
        android:id="@+id/button_gen_iii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/gen_fragment_button_vertical_margins"
        android:layout_weight="1"
        android:background="@drawable/button_borders"
        android:stateListAnimator="@null"
        android:text="@string/gen_III_button"/>

    <Button
        android:id="@+id/button_gen_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/gen_fragment_button_vertical_margins"
        android:layout_weight="1"
        android:background="@drawable/button_borders"
        android:stateListAnimator="@null"
        android:text="@string/gen_IV_button"/>

    <Button
        android:id="@+id/button_gen_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/gen_fragment_button_vertical_margins"
        android:layout_weight="1"
        android:background="@drawable/button_borders"
        android:stateListAnimator="@null"
        android:text="@string/gen_V_button"/>

    <Button
        android:id="@+id/button_gen_vi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/gen_fragment_button_vertical_margins"
        android:layout_weight="1"
        android:background="@drawable/button_borders"
        android:stateListAnimator="@null"
        android:text="@string/gen_VI_button"/>
</LinearLayout>
